# BlackSilk-Blockchain

./: .gitignore  BlackSilk Blockchain.docx  CODE_IMPROVEMENTS_SUMMARY.md  Cargo.toml  EASY_BUILD.md  GETTING_STARTED.md  GOVERNANCE.md  PRODUCTION_READY.md  RANDOMX_BUILD_SUCCESS.md  RANDOMX_PRODUCTION_COMPLETE.md  README.md  REMOVE_ME_CLEANUP_LOG.txt  ROADMAP.md  RUST_NATIVE_RANDOMX_COMPLETE.md  SECURITY.md  TESTNET_LAUNCH.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_SOLUTION.md  build-full-project.ps1  build-full-project.sh  build.rs  build_output.txt  build_randomx_windows.bat  build_randomx_windows.ps1  chain.json  compare_kat_instructions.txt  docker-compose.testnet.yml  docker-compose.yml  draft.txt  easy_build.ps1  easy_build.sh  enable_hugepages_and_benchmark.ps1  package.json  parser.rs  quick-launch.ps1  quick-launch.sh  secedit.jfm  secedit.sdb  setup_randomx.sh  test-prerequisites.sh  (+9 more)
benches/: crypto.rs
blacksilk/: Cargo.toml
blacksilk-ui/: openapi.yaml  package.json
blacksilk-ui-new/: package.json
block-explorer/: Cargo.toml  README.md  next.config.js  package.json  tailwind.config.js
config/: miner_config.toml  wallet_config.toml
data/: chain.json
docker/: marketplace.Dockerfile  miner.Dockerfile  node.Dockerfile  wallet.Dockerfile
docs/: README_PRO.md  advanced_features.md  architecture.md  ring_signature_verification.md
i2p/: Cargo.toml
marketplace/: Cargo.toml
marketplace/backend/: Cargo.toml
marketplace/backend/src/: main.rs  migrate.sql  stratum.rs
marketplace/backend/src/migrations/: 2025-05-22-01_create_reviews.sql
marketplace/frontend/: README.md  middleware.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
marketplace/frontend/components/: CategoryCard.tsx  CommunityWarning.tsx  DisputeVoting.tsx  Layout.tsx  ListingForm.tsx  NodeStatus.tsx  OrderTracking.tsx  PrivacyIndicator.tsx  ProductCard.tsx  ReviewForm.tsx  SearchFilters.tsx  ShoppingCart.tsx  WalletButton.tsx  WalletProvider.tsx  index.ts
marketplace/frontend/hooks/: index.ts
marketplace/frontend/lib/: api.ts
marketplace/frontend/pages/: 404.tsx  _app.tsx  _error.tsx  account.tsx  checkout.tsx  contact.tsx  dashboard.tsx  help.tsx  index.tsx  login.tsx  orders.tsx  search.tsx  sell.tsx
marketplace/frontend/pages/api/: buy.ts  reviews.ts
marketplace/frontend/pages/api/ipfs/: upload.ts
marketplace/frontend/pages/api/listings/: index.ts
marketplace/frontend/pages/api/orders/: index.ts
marketplace/frontend/pages/category/: [id].tsx
marketplace/frontend/pages/escrow/: [contract_id].tsx
marketplace/frontend/pages/listings/: [id].tsx  new.tsx
marketplace/frontend/pages/order/: confirmation.tsx
marketplace/frontend/pages/product/: [id].tsx
marketplace/frontend/styles/: globals.css
marketplace/frontend/types/: index.ts  product.ts  user.ts
marketplace/frontend/utils/: ipfs.ts  nodeApi.ts  useOrderStatusUpdates.ts  wallet.ts  ws.ts
marketplace/src/: database.rs  decentralized_storage.rs  escrow_integration.rs  ipfs_client.rs  main.rs  main_old.rs  models.rs  node_client.rs  smart_contracts.rs
marketplace/src/smart_contracts/: escrow_contract.rs
marketplace/templates/marketplace/: category.html  index.html  login.html  product.html  sell.html
miner/: Cargo.toml  build.rs  build_old.rs  build_pure.rs  wrapper.h
miner/src/: main.rs  main_new.rs  main_old.rs  pure_randomx.rs  randomx_dll_check.rs  randomx_ffi.rs  randomx_pro.rs  randomx_pure_wrapper.rs  randomx_wrapper.rs
miner/src/randomx/: aes_generator.rs  blake2b_generator.rs  cache.rs  dataset.rs  instruction.rs  mod.rs  superscalar.rs  vm.rs
ml-dsa44-standalone/: Cargo.toml  README.md
ml-dsa44-standalone/src/: lib.rs  tests.rs
monitoring/: Cargo.toml  docker-compose.yml  prometheus.yml
node/: Cargo.toml  PRIVACY_DEPENDENCIES.txt
node/src/: # Code Citations.md  escrow.rs  http_server.rs  lib.rs  main.rs  mining.rs  pqsignatures_integration.rs  randomx_verifier.rs  wasm_vm.rs  wasm_vm_tests.rs
node/src/network/: mod.rs  privacy.rs  tor_process.rs
node/src/randomx/: cache.rs  dataset.rs  mod.rs  superscalar.rs  vm.rs
node/tests/: ml_dsa_44_integration.rs
pqcrypto/: Cargo.toml  README.md  build.rs
pqcrypto_native/: ADDING_ALGORITHMS.md  Cargo.toml
pqcrypto_native/.github/workflows/: ci.yml
pqcrypto_native/algorithms/: mod.rs
pqcrypto_native/benches/: bench_dilithium.rs  criterion_bench.rs  keygen.rs
pqcrypto_native/src/: lib.rs  main.rs  traits.rs  wallet.rs
pqcrypto_native/src/algorithms/: dilithium.rs  falcon.rs  falcon_fft.rs  falcon_fft_tests.rs  falcon_gauss.rs  falcon_gauss_tests.rs  falcon_poly.rs  falcon_poly_tests.rs  falcon_prng.rs  falcon_prng_tests.rs  mldsa.rs  mldsa_ntt.rs  mldsa_tests.rs  mod.rs
pqcrypto_native/src/algorithms/mldsa/: mldsa_ntt.rs  mod.rs
pqcrypto_native/src/utils/: hashing.rs  mod.rs  secure_zero.rs
pqcrypto_native/tests/: api.rs  bip39.rs  deterministic.rs  fuzz.rs  fuzz_extra.rs  kat_dilithium2.rs  kat_dilithium2_nist.rs  kat_falcon512.rs  kat_falcon512_nist.rs  property.rs  wallet.rs
pqcrypto_native/tests/kat_vectors/: dilithium2_kat.json
pqcrypto_native/utils/: mod.rs
pqsignatures/: Cargo.toml  README.md
pqsignatures/.github/workflows/: ci.yml
pqsignatures/src/: dilithium2.rs  error.rs  falcon512.rs  hybrid.rs  lib.rs  mldsa44.rs  tests.rs  traits.rs
pqsignatures/tests/: kat_test.py  pqsignatures.rs
primitives/: Cargo.toml
primitives/src/: escrow.rs  lib.rs  ring_sig.rs  zkp.rs
scripts/: Cargo.toml  compare_logs.rs  deploy-seed-nodes.sh  integration-tests.sh  monitoring-alerting-setup.sh  security-audit-prep.sh  setup-faucet.sh  setup-monitoring.sh  setup-test-environment.sh  setup-web-wallet.sh  testnet-launch.sh
smart-contracts/: Cargo.toml
src/: alloc_setup.rs  lib.rs  main.rs  mldsa44.rs
test_wallet/: wallet.json
tests/: kat.rs  (+4 more)
wallet/: Cargo.toml
wallet/src/: cli.rs  hardware.rs  lib.rs  main.rs  pqkey.rs  pqsignatures_integration.rs  randomx.rs
wallet/src/tests/: privacy_commands.rs
wallet/tests/: privacy_commands.rs
wallet/wallet_data/: wallet.json
(+167 files in other folders)
