[package]
name = "blacksilk"
version = "0.1.0"
edition = "2021"
description = "Privacy-focused blockchain with integrated decentralized marketplace"
authors = ["BlackSilk Team"]
license = "MIT"

[workspace]
members = [
    "node",
    "wallet",
    "primitives",
    "marketplace/backend",
    "miner"
]

# wallet = { path = "./wallet" }

[dependencies]
primitives = { path = "./primitives" }
node = { path = "./node" }

# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
curve25519-dalek = "4.0"
ed25519-dalek = "2.0"
bulletproofs = "4.0"
merlin = "3.0"
randomx-rs = "0.2"

# Network & P2P
libp2p = { version = "0.51", features = ["tcp", "dns"] }
tor_client = "0.0.11"
# i2p = { git = "https://github.com/eyedeekay/i2p-rs" } # Uncomment and use when ready for I2P integration

# Storage
rocksdb = "0.20"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
tempfile = "3.5"

[[bench]]
name = "crypto"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
