[workspace]
members = [
    "wallet",
    "node",
    "marketplace",
    "primitives",
    "miner",
    "web-wallet",
    "testnet-faucet",
    "smart-contracts/escrow_contract",
    "smart-contracts/marketplace_contract",
    "smart-contracts/randomx",
]

[package]
name = "BlackSilk"
version = "0.1.0"
edition = "2021"

[dependencies]
node = { path = "node" }
primitives = { path = "primitives" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false
strip = true

# Ultra-aggressive CPU optimizations for mining
[profile.release.package."blacksilk-miner"]
opt-level = 3
overflow-checks = false

[patch.crates-io]
i2p = { path = "i2p" }
