[workspace]
members = [
    "wallet",
    "node",
    "marketplace",
    "primitives",
    "miner",
    "web-wallet",
    "testnet-faucet",
    "smart-contracts/escrow_contract",
    "smart-contracts/marketplace_contract",
    "smart-contracts/randomx",
    "pqcrypto_native",
    "scripts", # Added scripts for Rust comparison tool
    "pqsignatures",
]
exclude = []

[package]
name = "BlackSilk"
version = "0.1.0"
edition = "2021"

[dependencies]
node = { path = "node" }
primitives = { path = "primitives" }
hex = "0.4"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
# Uncomment if you want to use Criterion for benchmarking
# criterion = "0.3"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false
strip = true

# Ultra-aggressive CPU optimizations for mining
[profile.release.package."blacksilk-miner"]
opt-level = 3
overflow-checks = false

[patch.crates-io]
i2p = { path = "i2p" }

[features]
debug_kat = []
