[package]
name = "ml-dsa44-standalone"
version = "0.1.0"
edition = "2021"
description = "Standalone pure Rust ML-DSA-44 signature scheme for integration with BlackSilk."

[dependencies]
ml-dsa = "0.1.0-pre.2"
zeroize = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
thiserror = "1.0"
proptest = { version = "1.4", optional = true }
pkcs8 = "=0.10.2"
der = "=0.7.6"

[dev-dependencies]
proptest = "1.4"

[features]
fuzzing = ["proptest"]

[lib]
name = "ml_dsa44_standalone"
path = "src/lib.rs"

[workspace]
