[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
primitives = { path = "../primitives" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
rand = "0.8"
rand_core = "=0.6.4"
tokio = { version = "1.37", features = ["full"] }
tor_client = "0.0.11"
i2p = "0.0.1"
rustls = "0.23"
rustls-pemfile = "2.0"
