[package]
name = "node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blacksilk-node"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
primitives = { path = "../primitives" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
base64 = "0.21"
hex = "0.4"
chrono = "0.4"
ed25519-dalek = "2.1"
curve25519-dalek = { version = "4.1", default-features = false }
rand = "0.8"
rand_core = "0.6"
tokio = { version = "1.37", features = ["full"] }
tor_client = "0.0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.0"
once_cell = "1.19"
aes = "0.8"
aes-gcm = { version = "0.10", features = ["std"] }
argon2 = "0.5"
blake2 = "0.10"
digest = "0.10"
rayon = "1.7"
libc = "0.2"
colored = "2.0"
torut = "0.2.1"
wasmer = "3.0"
wasm-bindgen = "0.2"
i2p = { path = "../i2p" }
