[package]
name = "pqsignatures"
version = "0.1.0"
edition = "2021"
description = "Production-grade, secure, constant-time Rust post-quantum signature schemes (Dilithium2, Falcon512, ML-DSA-44) with hybrid support."

[dependencies]
crystals-dilithium = "1.0"
falcon-rust = "0.1.2"
ml-dsa = "0.1.0-pre.2"
zeroize = "1.5"
ed25519-dalek = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
thiserror = "1.0"
proptest = { version = "1.4", optional = true }

[dev-dependencies]
proptest = "1.4"

[features]
fuzzing = ["proptest"]

[lib]
name = "pqsignatures"
path = "src/lib.rs"
