[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
rand = "0.8.5"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
ark-bls12-381 = "0.4"
ark-std = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-ec = "0.4"

[features]
zkp = [] # Enable zk-SNARKs/advanced ZKP support (future)

# [dependencies]
# bellman = { version = "*", optional = true, features = ["zkp"] } # Example for future
# arkworks = { version = "*", optional = true, features = ["zkp"] } # Example for future
