[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
node = { path = "../node" }
primitives = { path = "../primitives" }
ed25519-dalek = "2.1"
rand = "0.8"
rand_core = "=0.6.4"
hex = "0.4"
curve25519-dalek = "4.1"
sha2 = "0.10"
bulletproofs = "5.0.0"
merlin = "3.0.0"
