[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
node = { path = "../node" }
primitives = { path = "../primitives" }
ed25519-dalek = "2.1"
rand = "0.8.5"
rand_core = "=0.6.4"
hex = "0.4"
curve25519-dalek = "4.1"
sha2 = "0.10"
bulletproofs = "5.0.0"
merlin = "3.0.0"
clap = { version = "4.5.38", features = ["derive"] }
bip39 = "2.0.0"
base58 = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
itertools = "0.13.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"], default-features = false }
colored = "2.0"
chrono = "0.4"
wasm-bindgen = "0.2"
bincode = "1.3"
