[package]
name = "blacksilk-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.28", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-macros = "0.4"
ed25519-dalek = "2.0"
hex = "0.4"
jsonwebtoken = "9.2"
rand = "0.8"
serde_json = "1.0"
chrono = "0.4"
ipfs-api-backend-hyper = "0.6"
anyhow = "1.0"
async-trait = "0.1" 